--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@ PowerPC for Dummies</span></span></strong><br />
 Hopefully, it will help people in creating new Gecko and Assembly codes for<br />
 Wii Games!</span></span></p>
 <style>
-  #lead {
+.lead {
  font-family: Times New Roman;
   font-size: medium;
     text-align: center;
-
   }
    </style>
 
