--- a/index.html
+++ b/index.html
@@ -101,5 +101,16 @@ Wii Games!</span></span></p>
 <p class="lead"><span style="font-size:20px"><font color="#ffffff" face="Rage Italic, sans-serif">xoris</font></span><br />
 &nbsp;</p>
 <p class="lead">&nbsp;</p>
+
+	<script> 
+	function newi (instruction, example){ //create a new html element that shows us the instruction and potential example
+	document.createElement("p")
+		p.innerText = instruction	
+		p.class = lead
+	
+	}
+	newi("heynerd")	
+	</script>
+	
 </body>
 </html>
