--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Wii Games!</span></span></p>
 
 	<script> 
 	function newi (instruction, example){ //create a new html element that shows us the instruction and potential example
-	document.createElement("p")
+	var p = document.createElement("p")
 		p.innerText = instruction	
 		p.class = lead
 	
