--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Wii Games!</span></span></p>
 	function newi (instruction, example){ //create a new html element that shows us the instruction and potential example
 	var p = document.createElement("p")
 		p.innerText = instruction	
-		p.class = lead
+		p.class = "lead"
 	
 	}
 	newi("heynerd")	
