--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@ The new address is stored in Register B</span></span><br>
 	
 <p style="text-align:center"><span style="font-size:72px"><span style="color:#fff;font-family:&quot;Rage Italic&quot;,sans-serif"><a id="bgelr" name="bgelr"></a>bgelr</span></span></p>
 
-<p style="text-align:center"><span style="font-size:26px"><span style="color:#fff">Branch If Greater Than Or Equal To Link Register</span></span></p>
+<p style="text-align:center"><span style="font-size:26px"><span style="color:#fff">Branch If Greater Than Or Equal to To Link Register</span></span></p>
 
 <p style="text-align:center"><span style="font-size:24px"><span style="color:#fff">Your code will jump to whatever address is held in the link register if a value is greater than or equal to what its being compared to.</span></span></p>
 
